updating qBitTorrent as fix is applied upstream

--- a/charts/media-stack/values.yaml
+++ b/charts/media-stack/values.yaml
@@ -23,7 +23,7 @@ apps:
   qbittorrent:
     enabled: true
     image: linuxserver/qbittorrent
-    tag: 5.1.0
+    tag: latest
     webPort: 8080
     peerPort: 6881
     ingressHost: qbittorrent.k.jpcortesp.place
