--- a/.github/workflows/deploy-charts.yaml
+++ b/.github/workflows/deploy-charts.yaml
@@ -18,18 +18,28 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           version: v3.13.0
-      - name: 📦 Package All Helm Charts
+          
+      - name: 🧩 Install yq
+        run: |
+          sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq
+          sudo chmod +x /usr/bin/yq
+      - name: 🕓 Set Date-Based appVersion & Package Charts
         run: |
           rm -rf public
           mkdir -p public
+          TODAY=$(date +%F)  # Format: YYYY-MM-DD
+
           for dir in charts/*/; do
-            if [ -f "$dir/Chart.yaml" ]; then
+            chart_file="${dir}Chart.yaml"
+            if [ -f "$chart_file" ]; then
+              echo "Updating appVersion in $chart_file to $TODAY"
+              # Use yq to update appVersion in-place
+              yq eval ".appVersion = \"$TODAY\"" -i "$chart_file"
               helm package "$dir" --destination public
             fi
           done
-          helm repo index public --url https://jpcortesp.github.io/jp-helm-repos
 
-      
+          helm repo index public --url https://jpcortesp.github.io/jp-helm-repos
 
       - name: 🚫 Add .nojekyll
         run: touch public/.nojekyll
