host for homepage update

--- a/charts/homepage/values.yaml
+++ b/charts/homepage/values.yaml
@@ -15,7 +15,7 @@ service:
 ingress:
   enabled: true
   className: traefik
-  host: dashy.k.jpcortesp.place
+  host: homepage.k.jpcortesp.place
   path: /
   tlsprovider: letsencrypt-godaddy
 
