--- a/charts/homepage/templates/deployment.yaml
+++ b/charts/homepage/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
           image: ghcr.io/gethomepage/homepage:latest
           env:
             - name: HOMEPAGE_ALLOWED_HOSTS
-              value: "{{ .Values.gateway.hostname }}" # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
+              value: "*" # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
           ports:
             - containerPort: 3000
           volumeMounts:
