--- a/charts/uptime-kuma/templates/deployment.yaml
+++ b/charts/uptime-kuma/templates/deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: {{ include "uptime-kuma.name" . }}
     spec:
+      securityContext:
+        fsGroup: 1000  # 👈 This gives group ownership over mounted volume
+
+    spec:
       containers:
         - name: uptime-kuma
           image: louislam/uptime-kuma:latest
@@ -29,9 +33,11 @@ spec:
               cpu: 500m
               memory: 512Mi
           securityContext:
-            runAsUser: 1000
-            runAsGroup: 1000
-            fsGroup: 1000
+              runAsUser: 1000
+              runAsGroup: 1000
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: false
+
       volumes:
         - name: data
           persistentVolumeClaim:
