--- a/charts/uptime-kuma/templates/pvc.yaml
+++ b/charts/uptime-kuma/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: uptime-kuma-pvc
+  name: uptime-kuma-pvc-helm
 spec:
   accessModes:
     - ReadWriteOnce
